# TitanicPrediction

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  development.yaml  genapidoc.sh  main.py  noxfile.py  production.yaml  pyproject.toml  pytest.ini  run_app.py  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  python-package.yml
docs/: conf.py  index.rst  titanicprediction.core.rst  titanicprediction.data.rst  titanicprediction.entities.rst  titanicprediction.interface.rst  titanicprediction.rst
src/titanicprediction/: utils.py
src/titanicprediction/core/: algorithms.py  services.py
src/titanicprediction/data/: analysis.py  preprocessing.py  repositories.py
src/titanicprediction/entities/: core.py
src/titanicprediction/interface/: web.py
tests/: test_main.py
